@@ -40,13 +40,13 @@ formatter::formatter(profile_container const & profile_)
 	format_map[ff_vma] = field_description(9, "vma", &formatter::format_vma);
 	format_map[ff_nr_samples] = field_description(9, "samples", &formatter::format_nr_samples);
 	format_map[ff_nr_samples_cumulated] = field_description(14, "cum. samples", &formatter::format_nr_cumulated_samples);
-	format_map[ff_percent] = field_description(12, "%", &formatter::format_percent);
+	format_map[ff_percent] = field_description(9, "%", &formatter::format_percent);
 	format_map[ff_percent_cumulated] = field_description(11, "cum. %", &formatter::format_cumulated_percent);
 	format_map[ff_linenr_info] = field_description(28, "linenr info", &formatter::format_linenr_info);
 	format_map[ff_image_name] = field_description(25, "image name", &formatter::format_image_name);
 	format_map[ff_app_name] = field_description(25, "app name", &formatter::format_app_name);
 	format_map[ff_symb_name] = field_description(30, "symbol name", &formatter::format_symb_name);
-	format_map[ff_percent_details] = field_description(12, "%", &formatter::format_percent_details);
+	format_map[ff_percent_details] = field_description(9, "%", &formatter::format_percent_details);
 	format_map[ff_percent_cumulated_details] = field_description(10, "cum. %", &formatter::format_cumulated_percent_details);
 }
 
@@ -173,7 +173,7 @@ void formatter::output_details(ostream & out, symbol_entry const * symb)
 	sample_container::samples_iterator it = profile.begin(symb);
 	sample_container::samples_iterator end = profile.end(symb);
 	for (; it != end; ++it) {
-		out << ' ';
+		out << "  ";
 		do_output(out, *symb, it->second, true);
 	}
 
