@@ -140,7 +140,10 @@ string const format_double(double value, size_t int_width, size_t fract_width)
 		   << setprecision(fract_width - 3) << value;
 	}
 
-	return os.str();
+	string formatted = os.str();
+	if (is_prefix(formatted, "100."))
+		formatted.erase(formatted.size() -1);
+	return formatted;
 }
 
 template <>
