@@ -215,10 +215,10 @@ string get_filename(string const & filename)
 /// Output a count and a percentage
 void output_count(double total_count, size_t count)
 {
-	cout << setw(9) << count << " ";
+	cout << setw(9) << count << ' ';
 	double ratio = op_ratio(count, total_count);
 	cout << format_double(ratio * 100, percent_int_width,
-			      percent_fract_width) << " ";
+			      percent_fract_width) << ' ';
 }
 
 
